Setting up for React

--- a/01-page-setup/01-page-setup.html
+++ b/01-page-setup/01-page-setup.html
@@ -5,6 +5,7 @@
     <title>Pure React Samples</title>
   </head>
   <body>
+    <!-- Page setup for React -->
     <!-- Target Container -->
     <div id="react-container"></div>
 
