--- a/01-page-setup/02-baked-salmon.html
+++ b/01-page-setup/02-baked-salmon.html
@@ -6,6 +6,7 @@
   <title>Recipes</title>
 </head>
 <body>
+    <!-- A body with tree children -->
     <h1>Recipes</h1>
 
     <section id="baked-salmon">
